--- a/python37/Dockerfile
+++ b/python37/Dockerfile
@@ -20,4 +20,6 @@ RUN apk --no-cache add \
     gcloud config set component_manager/disable_update_check true && \
     gcloud config set metrics/environment github_docker_image && \
     gcloud --version
+
+ENV CLOUDSDK_PYTHON=/usr/bin/python2
 VOLUME ["/root/.config"]
