--- a/go1.8/Dockerfile
+++ b/go1.8/Dockerfile
@@ -22,4 +22,6 @@ RUN apk --no-cache add \
     gcloud config set component_manager/disable_update_check true && \
     gcloud config set metrics/environment github_docker_image && \
     gcloud --version
+RUN gcloud components install app-engine-go
+
 VOLUME ["/root/.config"]
