--- a/python37/Dockerfile
+++ b/python37/Dockerfile
@@ -3,6 +3,7 @@ ARG CLOUD_SDK_VERSION=218.0.0
 ENV CLOUD_SDK_VERSION=$CLOUD_SDK_VERSION
 
 ENV PATH /google-cloud-sdk/bin:$PATH
+
 RUN apk --no-cache add \
         curl \
         python \
@@ -13,6 +14,7 @@ RUN apk --no-cache add \
         git \
         gnupg \
         gcc \
+        linux-headers \
     && curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${CLOUD_SDK_VERSION}-linux-x86_64.tar.gz && \
     tar xzf google-cloud-sdk-${CLOUD_SDK_VERSION}-linux-x86_64.tar.gz && \
     rm google-cloud-sdk-${CLOUD_SDK_VERSION}-linux-x86_64.tar.gz && \
@@ -20,8 +22,22 @@ RUN apk --no-cache add \
     gcloud config set core/disable_usage_reporting true && \
     gcloud config set component_manager/disable_update_check true && \
     gcloud config set metrics/environment github_docker_image && \
+    gcloud components install app-engine-python && \
+    gcloud components remove bq gsutil && \
     gcloud --version
-RUN gcloud components install app-engine-python
+
+RUN rm -r \
+        /google-cloud-sdk/RELEASE_NOTES \
+        /google-cloud-sdk/README \
+        /google-cloud-sdk/VERSION \
+        /google-cloud-sdk/*.inc \
+        /google-cloud-sdk/deb \
+        /google-cloud-sdk/rpm \
+        /google-cloud-sdk/platform/ext-runtime \
+        /google-cloud-sdk/.install/.download \
+        /google-cloud-sdk/.install/.backup \
+    && find /google-cloud-sdk/ -name "*.pyc" -delete
+
 
 ENV CLOUDSDK_PYTHON=/usr/bin/python2
 RUN sed -i 's/env python/env python2/' /google-cloud-sdk/bin/dev_appserver.py
